--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,20 +2,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <link rel="stylesheet" href="homepage.css">
+  <link rel="stylesheet" href="static/homepage.css">
+  <script src="homepage.js" type="text/javascript"></script>
 </head>
 
 <body>
 <div id = "wrapper1">
-  <button class = "button button1">Angry</button>
-  <button class = "button button2">Sad</button>
-  <button class = "button button3">Happy</button>
+  <button class = "button" id ="button1">Angry</button>
+  <button class = "button" id ="button2">Sad</button>
+  <button class = "button" id ="button3">Happy</button>
 
 </div>
 <div id = "wrapper2">
-  <button class = "button button4">Annoyed</button>
-  <button class = "button button5">Tired</button>
-  <button class = "button button6">Excited</button>
+  <button class = "button" id = "button4">Annoyed</button>
+  <button class = "button" id = "button5">Tired</button>
+  <button class = "button" id = "button6">Excited</button>
 </div>
 </body>
 </html>
