--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link rel="stylesheet" href="static/homepage.css">
-  <script src="homepage.js" type="text/javascript"></script>
+  <script src="static/homepage.js" type="text/javascript"></script>
 </head>
 
 <body>
