--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -18,8 +18,8 @@
 
 <body>
 <div id = "wrapper1">{% for emotion in emotions %}
-  <!--<a class="buttonish" href="/emotion?emotion={{emotion}}">{{emotion}}</a>-->
-  <button class="button" onclick="handleEmotion('{{emotion}}', this)">{{emotion}}</button>
+  <a class="buttonish" href="/emotion?emotion={{emotion}}">{{emotion}}</a>-->
+  <!--<button class="button" onclick="handleEmotion('{{emotion}}', this)">{{emotion}}</button>-->
   {% endfor %}
 </div>
 </body>
