--- a/static/homepage.css
+++ b/static/homepage.css
@@ -10,11 +10,15 @@
     display: inline-block;
     font-size: 40px;
     margin: 4px 2px;
+
+
     /* border-radius: 50%; */
 
-
     }
-  button:hover {
+ body {
+   background-color: #D8E6CF
+ }
+  .button:hover {
     background-color: #145859
   }
 
