--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,7 +4,7 @@
   <title>Title</title>
   <link rel="stylesheet" href="static/homepage.css">
   <script src="static/homepage.js" type="text/javascript"></script>
-  <style>
+  <!-- <style>
     .buttonish {
       background-color: lightgreen;
       padding: 20px;
@@ -13,7 +13,7 @@
       text-decoration: none;
       font-family: Verdana;
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
