modified css for emotionpage.css

--- a/templates/emotionpage.html
+++ b/templates/emotionpage.html
@@ -6,7 +6,7 @@
     <title> Your emotion was {{emotion}}</title>
   </head>
   <body>
-    <h1>Why are you  feeling {{emotion}} ?</h1>
+    <h1 id = "greetingmessage">Why are you  feeling {{emotion}} ?</h1>
     <div class="slidecontainer">
       <input type="range" min="1" max="10" value="50" class="slider" id="myRange">
     </div>
