--- a/static/emotionpage.css
+++ b/static/emotionpage.css
@@ -8,7 +8,7 @@
     appearance: none;
     width: 100%; /* Full-width */
     height: 25px; /* Specified height */
-    background: #d3d3d3; /* Grey background */
+    background: white; /* Grey background #d3d3d3 */
     outline: none; /* Remove outline */
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
     -webkit-transition: .2s; /* 0.2 seconds transition on hover */
@@ -36,3 +36,15 @@
     background: #4CAF50; /* Green background */
     cursor: pointer; /* Cursor on hover */
 }
+
+#greetingmessage {
+
+  text-align: center;
+  background-color: #4F9646;
+  color: white;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding: 5%;
+}
+
+body {background-color: #D8E6CF}
