--- a/templates/emotionpage.html
+++ b/templates/emotionpage.html
@@ -3,12 +3,28 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="static/emotionpage.css">
+
+
     <title> Your emotion was {{emotion}}</title>
   </head>
   <body>
-    <h1 id = "greetingmessage">Why are you  feeling {{emotion}} ?</h1>
+    <div class = "questioncontainer">
+    <h1 id = "greetingmessage">Why do I feel {{emotion}} right now ?</h1>
+    <form method = "get">
+      <input type = "text" name = "answer"></input>
+      <input type="submit" value="Submit">
+    </form>
+
+  </div>
     <div class="slidecontainer">
-      <input type="range" min="1" max="10" value="50" class="slider" id="myRange">
+
+      <input type="range" min="1" max="10" value="5" class="slider" id="myRange">
+      <h2 >Intensity</h2>
+
+      <h2 id= "demo"></h2>
     </div>
+
+
   </body>
+  <script src="static/emotionpage.js" type="text/javascript"></script>
 </html>
