tried to make the blocks in a grid format, didnt work tho!

--- a/static/homepage.css
+++ b/static/homepage.css
@@ -9,25 +9,76 @@
     text-decoration: none;
     display: inline-block;
     font-size: 40px;
-    margin: 4px 2px;
-
+    /* margin: 4px 2px; */
+    align-items: center;
 
     /* border-radius: 50%; */
 
     }
- body {
+
+body {
    background-color: #D8E6CF
  }
-  .button:hover {
+
+.buttons {
+  width: 520px;
+  display: grid;
+  grid-gap: 50px 100px;
+}
+/*
+.buttons > a {
+  width: 200px;
+  height: 200px;
+  float: left;
+  margin: 20px;
+} */
+
+
+.button:hover {
     background-color: #145859
   }
-
+/*
 #wrapper1 {
   text-align: center;
   margin-top: 180px;
-}
+  display: flex;
+} */
 
-#wrapper2 {
+/* #wrapper2 {
   text-align: center;
   margin-bottom: 180px;
+} */
+
+.sidenav {
+    width: 130px;
+    position: fixed;
+    z-index: 1;
+    top: 20px;
+    left: 10px;
+    background: #eee;
+    overflow-x: hidden;
+    padding: 8px 0;
+}
+
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #2196F3;
+    display: block;
+}
+
+.sidenav a:hover {
+    color: #064579;
+}
+
+.main {
+    margin-left: 140px; /* Same width as the sidebar + left position in px */
+    font-size: 28px; /* Increased text to enable scrolling */
+    padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
 }
