--- a/static/logs.css
+++ b/static/logs.css
@@ -39,7 +39,9 @@ body {font-family: Verdana, sans-serif;}
     margin: 0;
     padding: 10px 0;
     background-color:#ddd;
+    height: fit-content;
 }
+
 
 .weekdays li {
     display: inline-block;
@@ -48,12 +50,41 @@ body {font-family: Verdana, sans-serif;}
     text-align: center;
 }
 
+#calendar_holder {
+  height: 65%;
+}
+
+.button {
+  background-color: #4CAF50; /* Green background */
+  color: white; /* White text */
+  cursor: pointer; /* Pointer/hand icon */
+  width: 100%;
+  height: 100%;
+  }
+  .btn-group button:not(:last-child) {
+    border-right: none; /* Prevent double borders */
+}
+
+.row {
+  background-color: #4CAF50; /* Green background */
+  border: 1px solid green; /* Green border */
+  color: white; /* White text */
+  cursor: pointer; /* Pointer/hand icon */
+}
+
+/* Clear floats (clearfix hack) */
+.btn-group:after {
+    content: "";
+    clear: both;
+    display: inline-block;
+  }
 /* Days (1-31) */
 .days {
     padding: 100px 0;
     background: #eee;
     margin: 0;
-
+    display: flex;
+    flex-flow: column wrap;
 }
 
 .days li {
@@ -64,6 +95,7 @@ body {font-family: Verdana, sans-serif;}
     margin-bottom: 5px;
     font-size:18px;
     color: #777;
+
 }
 
 /* Highlight the "current" day */
@@ -72,4 +104,3 @@ body {font-family: Verdana, sans-serif;}
     background: #1abc9c;
     color: white !important
 }
-Try it Yourself »
