--- a/templates/about.html
+++ b/templates/about.html
@@ -1,11 +1,19 @@
 <html>
   <head>
     <title>About Us</title>
+    <link rel="stylesheet" href="static/homepage.css">
   </head>
   <body>
+    <div class="sidenav">
+      <a href="/about">ABOUT</a>
+      <a href="/dailylog">DAILY LOG</a>
+      <a href = "/homepage">HOMEPAGE</a>
+    </div>
   <div class = "section">
     <h1> Our Mission </h1>
-    <p> We created an application that enables our users to easily track  \n their daily emotions so that they have a tool to measure their emotional well being during the day </p>
+    <h2> To promote emotional well being. </h2>
+    <h1> About the Application</h1>
+    <h2> We created an application that enables our users to easily track their daily emotions so that they have a tool to measure their emotional well being during the day. </h2>
   </div>
   </body>
 </html>
