--- a/templates/emotionpage.html
+++ b/templates/emotionpage.html
@@ -17,8 +17,10 @@
 
   </div>
     <div class="slidecontainer">
+      <form>
+      <input type="range" min="1" max="10" value="" class="slider" id="myRange" name = "intensityAnswer">
 
-      <input type="range" min="1" max="10" value="5" class="slider" id="myRange">
+    </form>
       <h2 >Intensity</h2>
 
       <h2 id= "demo"></h2>
