--- a/templates/emotionpage.html
+++ b/templates/emotionpage.html
@@ -10,8 +10,8 @@
   <body>
     <div class = "questioncontainer">
     <h1 id = "greetingmessage">Why do I feel {{emotion}} right now ?</h1>
-    <form method = "get">
-      <input type = "text" name = "answer"></input>
+    <form id="reasonInput" method="post">
+      <input type="text" name="answer"></input>
       <input type="submit" value="Submit">
     </form>
 
@@ -19,7 +19,7 @@
     <div class="slidecontainer">
 
       <input type="range" min="1" max="10" value="5" class="slider" id="myRange">
-      <h2 >Intensity</h2>
+      <h2>Intensity</h2>
 
       <h2 id= "demo"></h2>
     </div>
