--- a/templates/emotionpage.html
+++ b/templates/emotionpage.html
@@ -10,25 +10,18 @@
   <body>
     <div class = "questioncontainer">
     <h1 id = "greetingmessage">Why do I feel {{emotion}} right now ?</h1>
-    <form id="reasonInput" method="post">
+    <form method="post" action="/">
       <input type="text" name="answer"></input>
       <input type="submit" value="Submit">
     </form>
 
   </div>
     <div class="slidecontainer">
-      <form>
-      <input type="range" min="1" max="10" value="" class="slider" id="myRange" name = "intensityAnswer">
 
-<<<<<<< HEAD
       <input type="range" min="1" max="10" value="5" class="slider" id="myRange">
       <h2>Intensity</h2>
-=======
-    </form>
-      <h2 >Intensity</h2>
->>>>>>> 65fb94cff3d9731072616e96257cdc6bfb32368d
 
-      <h2 id= "demo"></h2>
+      <h2 id="intensity"></h2>
     </div>
 
 
