with Athar's new edits, trying to make it easy to merge

--- a/templates/dailylog.html
+++ b/templates/dailylog.html
@@ -1,6 +1,6 @@
 <head>
   LOGS!
-  <link rel="stylesheet" href="static/logs.css">
+  <link rel="stylesheet" href="logs.css">
 </head>
 <body>
   <section class="title-bar">
