calendar changes w/ css

--- a/templates/dailylog.html
+++ b/templates/dailylog.html
@@ -1,6 +1,6 @@
 <head>
   LOGS!
-  <link rel="stylesheet" href="static/logs.css">
+  <link rel="stylesheet" href="logs.css">
 </head>
 <body>
   <section class="title-bar">
@@ -8,7 +8,7 @@
       <span class="burger__lines">Toggle Menu</span>
     </button>
     <span class="title-bar__year">
-      Calendr > {{month}} {{year}}
+      Calendar > {{month}} {{year}}
     </span>
     <span class="title-bar__month">
       Month
