--- a/templates/emotionpage.html
+++ b/templates/emotionpage.html
@@ -10,18 +10,18 @@
   <body>
     <div class = "questioncontainer">
     <h1 id = "greetingmessage">Why do I feel {{emotion}} right now ?</h1>
-    <form method="post" action="/">
+    <form method="post" action="/dailylog">
       <input type="text" name="answer"></input>
+      <input type="hidden" name="my_emotion" value="{{emotion}}"></input>
       <input type="submit" value="Submit">
-    </form>
-
   </div>
     <div class="slidecontainer">
-      <input type="range" min="1" max="10" value="" class="slider" id="myRange" name = "intensityAnswer">
+      <input type="range" min="1" max="10" value="1" class="slider" id="myRange" name = "intensityAnswer">
       <h2>Intensity</h2>
       <h2 id= "intensity"></h2>
     </div>
 
+</form>
 
   </body>
   <script src="static/emotionpage.js" type="text/javascript"></script>
