added then removed image

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -20,6 +20,7 @@
 <body>
   <h1>LOG YOUR FEELINGS</h1>
   <!-- Side navigation -->
+  <!-- <img src="http://3.bp.blogspot.com/-h-WhtjzYEuE/UIWuaw5r_rI/AAAAAAAAB3s/f28c3ncTbyQ/s400/backwards_triangle.JPG"> -->
   <div class="sidenav">
     <a href="/about">ABOUT</a>
     <a href="/dailylog">DAILY LOG</a>
