--- a/templates/table/index.html
+++ b/templates/table/index.html
@@ -33,7 +33,7 @@
 							<thead>
 								<tr class="row100 head">
 									<th class="cell100 column1">Emotion Logged</th>
-									<th class="cell100 column2">Type</th>
+									<th class="cell100 column2">Intensity</th>
 									<th class="cell100 column3">Time</th>
 									<th class="cell100 column4">Reason</th>
 									<th class="cell100 column5">Date</th>
@@ -47,7 +47,7 @@
 							<tbody>
 								<tr class="row100 body">
 									<td class="cell100 column1">I feel confident</td>
-									<td class="cell100 column2">Happy</td>
+									<td class="cell100 column2">7</td>
 									<td class="cell100 column3">11:00AM</td>
 									<td class="cell100 column4">Finished project</td>
 									<td class="cell100 column5">7/24</td>
