Moved files:log.css to another folder, and updated about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,19 +1,26 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>About Us</title>
+    <link rel='shortcut icon' type='image/png' href='static/favicon.png'>
     <link rel="stylesheet" href="static/homepage.css">
   </head>
   <body>
+    <div id="icontitle">
+    <a id="mood-e"> Spiral-up</a>
+  </div>
     <div class="sidenav">
       <a href="/about">ABOUT</a>
       <a href="/dailylog">DAILY LOG</a>
       <a href = "/homepage">HOMEPAGE</a>
     </div>
-  <div class = "section">
+  <div class = "section">]
     <h1> Our Mission </h1>
-    <h2> To promote emotional well being. </h2>
+    <h2 id=promote> To promote emotional well being. </h2>
+  <h1> What is Mental Health? </h1>
+    <h2>Mental health includes our emotional, psychological, and social well-being. It affects how we think, feel, and act. It also helps determine how we handle stress, relate to others, and make choices. Mental health is important at every stage of life, from childhood and adolescence through adulthood.</h2>
     <h1> About the Application</h1>
-    <h2> We created an application that enables our users to easily track their daily emotions so that they have a tool to measure their emotional well being during the day. </h2>
+    <h2> We created an application that enables our users to easily track their daily emotions so that they have a tool to measure their emotional well being and mental health during the day. </h2>
   </div>
   </body>
 </html>
