--- a/static/homepage.css
+++ b/static/homepage.css
@@ -21,11 +21,11 @@ body {
    background-color: #D8E6CF
  }
 
-.buttons {
+/* .buttons {
   width: 520px;
   display: grid;
   grid-gap: 50px 100px;
-}
+} */
 /*
 .buttons > a {
   width: 200px;
@@ -92,6 +92,7 @@ h1{
   margin-top: 50px;
   padding: 2%;
   text-align: center;
+
 }
 
 h2 {
