--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link rel="stylesheet" href="static/homepage.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <script src="static/homepage.js" type="text/javascript"></script>
   <!-- <style>
     .buttonish {
