--- a/static/homepage.css
+++ b/static/homepage.css
@@ -43,6 +43,8 @@ body {
   text-align: center;
   margin-top: 60px;
   margin-left: 200px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* #wrapper2 {
