--- a/templates/table/index.html
+++ b/templates/table/index.html
@@ -42,7 +42,28 @@
 						</table>
 					</div>
 
-				
+					<div class="table100-body js-pscroll">
+						<table>
+							<tbody>
+								{% for entry in tableData %}
+								<tr class="row100 body">
+									<td class="cell100 column1">{{ entry.chosen_emotion }}</td>
+									<td class="cell100 column2">{{ entry.chosen_intensity}}</td>
+									<td class="cell100 column3">{{ entry.chosen_time}}</td>
+									<td class="cell100 column4">{{ entry.chosen_reason}}</td>
+									<!-- <td class="cell100 column5"></td> -->
+								</tr>
+								{% endfor%}
+
+
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<a id = "homelink" href = "/homepage">Log another feeling</a>
 
 
 <!--===============================================================================================-->
