--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Spiral UP!</title>
   <link rel="stylesheet" href="static/homepage.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <script src="static/homepage.js" type="text/javascript"></script>
