--- a/static/homepage.css
+++ b/static/homepage.css
@@ -13,12 +13,23 @@
     margin: 4px 2px;
     align-items: center;
 
-    /* border-radius: 50%; */
+    text-align: center;
+    display: inline-flex;
+    vertical-align: middle;
 
-    }
+    flex-direction: column;
+    justify-content: center;
+
+    /* display: inline-block; */
+    font-family: 'Raleway', sans-serif;
+
+    border-radius: 50%;
+
+}
+
 
 body {
-   background-color: #D8E6CF
+   background-color: #EBFEFF
  }
 
 /* .buttons {
@@ -67,6 +78,7 @@ body {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
     font-size: 25px;
+    font-family: 'Raleway', sans-serif;
     color: #2196F3;
     display: block;
 }
@@ -96,6 +108,7 @@ h1{
   margin-top: 50px;
   padding: 2%;
   text-align: center;
+  font-family: 'Raleway', sans-serif;
 
 }
 
@@ -106,6 +119,7 @@ h2 {
   line-height: 50px;
   vertical-align: baseline;
   font-size: 20;
+  font-family: 'Raleway', sans-serif;
 }
 
 #icontitle{
