--- a/templates/table/index.html
+++ b/templates/table/index.html
@@ -22,7 +22,7 @@
 <!--===============================================================================================-->
 </head>
 <body>
-
+<h1> Daily Log </h1>
 	<div class="limiter">
 		<div class="container-table100">
 			<div class="wrap-table100">
