moved "logged another feeling"

--- a/templates/table/index.html
+++ b/templates/table/index.html
@@ -23,6 +23,7 @@
 </head>
 <body>
 <h1> Daily Log </h1>
+<a id = "homelink" href = "/homepage">Log another feeling</a>
 	<div class="limiter">
 		<div class="container-table100">
 			<div class="wrap-table100">
