--- a/static/emotionpage.css
+++ b/static/emotionpage.css
@@ -7,17 +7,20 @@
     -webkit-appearance: none;  /* Override default CSS styles */
     appearance: none;
     width: 100%; /* Full-width */
-    height: 25px; /* Specified height */
+    height: 15px; /* Specified height */
+    border-radius: 5px;
     background: white; /* Grey background #d3d3d3 */
     outline: none; /* Remove outline */
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
     -webkit-transition: .2s; /* 0.2 seconds transition on hover */
     transition: opacity .2s;
+    background-color: #D2D4CC;
 }
 
 /* Mouse-over effects */
 .slider:hover {
     opacity: 1; /* Fully shown on mouse-over */
+    background-color: #D2D4CC;
 }
 
 /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
@@ -26,6 +29,7 @@
     appearance: none;
     width: 25px; /* Set a specific slider handle width */
     height: 25px; /* Slider handle height */
+    border-radius: 50%;
     background: #4CAF50; /* Green background */
     cursor: pointer; /* Cursor on hover */
 }
@@ -33,6 +37,7 @@
 .slider::-moz-range-thumb {
     width: 25px; /* Set a specific slider handle width */
     height: 25px; /* Slider handle height */
+    border-radius: 50%;
     background: #4CAF50; /* Green background */
     cursor: pointer; /* Cursor on hover */
 }
@@ -40,11 +45,20 @@
 .questioncontainer {
 
   text-align: center;
-  background-color: #4F9646;
+  /* background-color: {{color}}; */
   color: white;
   margin-left: 10%;
   margin-right: 10%;
+  margin-top: 10%;
+  margin-bottom: 10%;
   padding: 5%;
+  font-family: 'Raleway', sans-serif;
 }
 
-body {background-color: #D8E6CF}
+h2 {
+  font-family: 'Raleway', sans-serif;
+  color: #81827D;
+  /* background-color: {{ description.color }}; */
+}
+
+body {background-color: #FFFFFF}
