--- a/templates/emotionpage.html
+++ b/templates/emotionpage.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="static/emotionpage.css">
-
-
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <title> Your emotion was {{emotion}}</title>
   </head>
   <body>
-    <div class = "questioncontainer">
+    <div class = "questioncontainer" style="background-color: {{color}}">
     <h1 id = "greetingmessage">You chose: {{emotion}}. Can you explain why?</h1>
     <form method="post" action="/dailylog">
       <input type="text" name="answer"></input>
@@ -18,7 +17,7 @@
     <div class="slidecontainer">
       <input type="range" min="1" max="10" value="1" class="slider" id="myRange" name = "intensityAnswer">
       <h2>Intensity</h2>
-      <h2 id= "intensity"></h2>
+      <h2 id="intensity"></h2>
     </div>
 
 </form>
