Autumn didn't realy do anythign, or maybe she can't remember

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -35,7 +35,7 @@
   {% endfor %}
 </div>
 <!-- _____________HERE BEGINS THE CODE FOR THE TOGGLE MENU_________________________________________ -->
-<div class="main">
+<!-- <div class="main">
 
   <div class="side">
     <nav class="dr-menu">
@@ -52,7 +52,7 @@
     </nav>
   </div>
 </div>
-</div>
+</div> -->
 <!-- ______________HERE ENDS THE CODE FOR THE TOGGLE MENU_____________________________________________  -->
 </body>
 </html>
