added a text picture

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,6 +4,7 @@
   <title>Title</title>
   <link rel="stylesheet" href="static/homepage.css">
   <script src="static/homepage.js" type="text/javascript"></script>
+  <img src="https://i.pinimg.com/originals/5a/d2/54/5ad254cd006b84b9a1a43e5be60a6950.jpg">
   <!-- <style>
     .buttonish {
       background-color: lightgreen;
