--- a/templates/about.html
+++ b/templates/about.html
@@ -4,17 +4,20 @@
     <title>About Us</title>
     <link rel='shortcut icon' type='image/png' href='static/favicon.png'>
     <link rel="stylesheet" href="static/homepage.css">
+    <a href= "/homepage">
+    <img id=logo src="static/spiral-up.png">
+    </a>
   </head>
   <body>
     <div id="icontitle">
-    <a id="mood-e"> Spiral-up</a>
+    <a id="spiral-up" href='/homepage'> Spiral-up</a>
   </div>
     <div class="sidenav">
       <a href="/about">ABOUT</a>
       <a href="/dailylog">DAILY LOG</a>
       <a href = "/homepage">HOMEPAGE</a>
     </div>
-  <div class = "section">]
+  <div class = "section">
     <h1> Our Mission </h1>
     <h2 id=promote> To promote emotional well being. </h2>
   <h1> What is Mental Health? </h1>
