--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,11 +1,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Spiral UP!</title>
+  <title>Title</title>
   <link rel="stylesheet" href="static/homepage.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <script src="static/homepage.js" type="text/javascript"></script>
-  <img src="https://i.pinimg.com/originals/5a/d2/54/5ad254cd006b84b9a1a43e5be60a6950.jpg">
+  <a href= "/homepage">
+  <img id=logo src="static/spiral-up.png">
+  </a>
   <!-- <style>
     .buttonish {
       background-color: lightgreen;
@@ -22,7 +23,6 @@
 <body>
   <h1>LOG YOUR FEELINGS</h1>
   <!-- Side navigation -->
-  <!-- <img src="http://3.bp.blogspot.com/-h-WhtjzYEuE/UIWuaw5r_rI/AAAAAAAAB3s/f28c3ncTbyQ/s400/backwards_triangle.JPG"> -->
   <div class="sidenav">
     <a href="/about">ABOUT</a>
     <a href="/dailylog">DAILY LOG</a>
