fixed time for table

--- a/templates/table/index.html
+++ b/templates/table/index.html
@@ -20,6 +20,12 @@
 	<link rel="stylesheet" type="text/css" href="static/css/util.css">
 	<link rel="stylesheet" type="text/css" href="static/css/main.css">
 <!--===============================================================================================-->
+<!-- <script type='text/javascript'>
+
+setTimeout("location.reload();",1000);
+
+</script> -->
+
 </head>
 <body>
 <h1> Daily Log </h1>
