edited the graph: moved js into html and made data and label in python

--- a/templates/dailygraph.html
+++ b/templates/dailygraph.html
@@ -7,5 +7,29 @@
   <body>
     <canvas id="line-chart" width="800" height="450"></canvas>
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
+  <script>
+  new Chart(document.getElementById("line-chart"), {
+    type: 'line',
+    data: {
+      // x-axis, will become timestamp
+      labels: {{labels}},
+      datasets: [{
+          //should be numeric value for emotion
+          data: {{data}},
+          // label: "North America",
+          borderColor: "#4BC4AE",
+          fill: false
+        }
+      ]
+    },
+    options: {
+      title: {
+        display: true,
+        text: 'A graph of your emotions'
+      }
+    }
+  });
+  </script>
   <script src="static/dailygraph.js" type="text/javascript"></script>
 </html>
