worked on the datetime for the graph

--- a/templates/dailygraph.html
+++ b/templates/dailygraph.html
@@ -13,7 +13,7 @@
     type: 'line',
     data: {
       // x-axis, will become timestamp
-      labels: {{labels}},
+      labels: {{xAxis}},
       datasets: [{
           //should be numeric value for emotion
           data: {{data}},
