cleaned up how the website looks and added hamburger bar to the other pages.

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,13 +9,28 @@
     </a>
   </head>
   <body>
+
     <div id="icontitle">
     <a id="spiral-up" href='/homepage'> Spiral-up</a>
   </div>
-    <div class="sidenav">
-      <a href="/about">ABOUT</a>
-      <a href="/dailylog">DAILY LOG</a>
-      <a href = "/homepage">HOMEPAGE</a>
+  <div>
+    <nav role='navigation'>
+        <div id="menuToggle">
+
+          <input type="checkbox" />
+          <span style="background:black;"></span>
+          <span style="background:black;"></span>
+          <span style="background:black;"></span>
+          <ul id="menu">
+            <a href="/homepage"><li>HomePage</li></a>
+            <a href="/dailylog"><li>Dailylog</li></a>
+            <a href="/about"><li>About</li></a>
+          </ul>
+
+        </div>
+      </nav>
+
+  </div>
     </div>
   <div class = "section">
     <h1> Our Mission </h1>
