--- a/static/homepage.css
+++ b/static/homepage.css
@@ -1,29 +1,28 @@
 .button {
     /* $button-dimmension: height *.2; */
-    height: 20vw;
-    width: 20vw;
-    background-color: #FFDDC0;
-    border: none;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 40px;
-    margin: 4px 2px;
-    align-items: center;
-
-    text-align: center;
-    display: inline-flex;
-    vertical-align: middle;
-
-    flex-direction: column;
-    justify-content: center;
-
-    /* display: inline-block; */
-    font-family: 'Raleway', sans-serif;
-
-    border-radius: 50%;
+    height: 15vw;
+width: 15vw;
+background-color: #FFDDC0;
+border: none;
+color: white;
+padding: 20px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 40px;
+margin: 4px 2px;
+align-items: center;
+text-align: center;
+display: inline-flex;
+vertical-align: middle;
+flex-direction: column;
+justify-content: center;
+/* display: inline-block; */
+font-family: 'Raleway', sans-serif;
+border-radius: 50%;
+margin-right: 5%;
+margin-top: 5%;
+margin-left: 3%;
 
 }
 @import url('https://fonts.googleapis.com/css?family=Raleway');
@@ -105,15 +104,11 @@ body {
   text-align: center;
 } */
 h1{
-  background-color: #35662F;
-  color: white;
-  margin-left: 300px;
-  margin-right: 250px;
-  margin-top: 50px;
-  padding: 2%;
-  text-align: center;
-  font-family: 'Raleway', sans-serif;
-
+    color: Black;
+    margin-left: 50px;
+    margin-top: 50px;
+    text-align: center;
+    font-size: 40;
 }
 
 h2 {
@@ -135,9 +130,165 @@ h2 {
 }
 
 #logo{
-  width: 140px;
-  height: 140px;
-  top: 0px;
-  right: 0px;
-  position: fixed;
+      width: 199px;
+      height: 200px;
+      position: absolute;
+      margin-left: 50px;
+      margin-top: -45;
+}
+
+/* hamburger menu */
+a
+{
+  text-decoration: none;
+  color: #232323; /* hamburger bar text colors */
+
+  transition: color 0.3s ease;
+}
+
+a:hover
+{
+  color: tomato;
+}
+
+#menuToggle
+{
+  display: block;
+  position: absolute;
+  top: 17px;
+  right: 50px;
+
+  z-index: 1;
+
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+
+
+  cursor: pointer;
+
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background: #f8efff; /* hamburger color */
+  border-radius: 3px;
+
+  z-index: 1;
+
+  transform-origin: 4px 0px;
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/*
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  opacity: 1;
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 0;
+  padding: 50px;
+  padding-top: 125px;
+  right: -100px;
+
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+
+  transform-origin: 0% 0%;
+  transform: translate(100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's fade it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: scale(1.0, 1.0);
+  opacity: 1;
+}
+
+.axis .domain {
+   display: none;
+ }
+
+ body {font-family: Arial;}
+
+#Ralewayfont{
+  font-family: 'Raleway', sans-serif;
 }
