--- a/templates/dailygraph.html
+++ b/templates/dailygraph.html
@@ -13,7 +13,7 @@
     type: 'line',
     data: {
       // x-axis, will become timestamp
-      labels: {{xAxis}},
+      labels: [{{xAxis|safe}}],
       datasets: [{
           //should be numeric value for emotion
           data: {{data}},
@@ -31,5 +31,5 @@
     }
   });
   </script>
-  <script src="static/dailygraph.js" type="text/javascript"></script>
+  <!-- script src="static/dailygraph.js" type="text/javascript"></script -->
 </html>
