fixed user complication, tried to fix reload complication (may not have worked)

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -27,6 +27,7 @@
     <a href = "/homepage">HOMEPAGE</a>
     <a href="/dailylog">DAILY LOG</a>
     <a href="/about">ABOUT</a>
+    <a href= {{link}}>{{signout}}</p>
   </div>
 
 <div id = "wrapper1">{% for emotion,description in emotions.iteritems() %}
