added signout to hamburger bar

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -46,8 +46,9 @@
           <a href="/homepage"><li>HomePage</li></a>
           <a href="/dailylog"><li>Dailylog</li></a>
           <a href="/about"><li>About</li></a>
+          <a href = {{link}}><li>{{signout}}</li></a>
         </ul>
->>>>>>> b65cbb9932f18ef5b759be51bb49a0300cedaedd
+
 
       </div>
     </nav>
