added hamburger bar to dailylog

--- a/templates/dailylog.html
+++ b/templates/dailylog.html
@@ -3,7 +3,24 @@
   <link rel="stylesheet" href="logs.css">
 </head>
 <body>
-  
+  <nav role='navigation'>
+      <div id="menuToggle">
+
+        <input type="checkbox" />
+
+        <span></span>
+        <span></span>
+        <span></span>
+
+        <ul id="menu">
+          <a href="/leaderboard"><li>Leaderboards</li></a>
+          <a href="/input"><li>Input data</li></a>
+          <a href="#"><li>Profile</li></a>
+          <a href="/logout"><li>Sign out</li></a>
+        </ul>
+
+      </div>
+    </nav>
   <section class="title-bar">
     <button class="title-bar__burger">
       <span class="burger__lines">Toggle Menu</span>
