--- a/templates/about.html
+++ b/templates/about.html
@@ -22,8 +22,8 @@
           <span style="background:black;"></span>
           <span style="background:black;"></span>
           <ul id="menu">
-            <a href="/homepage"><li>HomePage</li></a>
-            <a href="/dailylog"><li>Dailylog</li></a>
+            <a href="/homepage"><li>Home</li></a>
+            <a href="/dailylog"><li>Daily Log</li></a>
             <a href="/about"><li>About</li></a>
           </ul>
 
