--- a/templates/dailygraph.html
+++ b/templates/dailygraph.html
@@ -16,7 +16,7 @@
       labels: [{{xAxis|safe}}],
       datasets: [{
           //should be numeric value for emotion
-          data: {{data}},
+          data: {{yAxis}},
           // label: "North America",
           borderColor: "#4BC4AE",
           fill: false
