--- a/templates/emotionpage.html
+++ b/templates/emotionpage.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="static/emotionpage.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
     <title> Your emotion was {{emotion}}</title>
   </head>
   <body>
