--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,9 +4,10 @@
   <title>Title</title>
   <link rel="stylesheet" href="static/homepage.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
   <script src="static/homepage.js" type="text/javascript"></script>
   <a href= "/homepage">
-  <img id=logo src="static/spiral-up.png">
+  <img id=logo src="static/spiral.jpg">
   </a>
   <!-- <style>
     .buttonish {
