--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,7 @@
     <title>About Us</title>
     <link rel='shortcut icon' type='image/png' href='static/favicon.png'>
     <link rel="stylesheet" href="static/homepage.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <a href= "/homepage">
     <img id=logo src="static/spiral-up.png">
     </a>
@@ -11,7 +12,7 @@
   <body>
 
     <div id="icontitle">
-    <a id="spiral-up" href='/homepage'> Spiral-up</a>
+    <a id="spiral-up" href='/homepage' class = "about"> Spiral-up</a>
   </div>
   <div>
     <nav role='navigation'>
@@ -33,12 +34,12 @@
   </div>
     </div>
   <div class = "section">
-    <h1> Our Mission </h1>
-    <h2 id=promote> To promote emotional well being. </h2>
-  <h1> What is Mental Health? </h1>
-    <h2>Mental health includes our emotional, psychological, and social well-being. It affects how we think, feel, and act. It also helps determine how we handle stress, relate to others, and make choices. Mental health is important at every stage of life, from childhood and adolescence through adulthood.</h2>
-    <h1> About the Application</h1>
-    <h2> We created an application that enables our users to easily track their daily emotions so that they have a tool to measure their emotional well being and mental health during the day. </h2>
+    <h1 class = "about"> Our Mission </h1>
+    <h2 id=promote class = "about"> To promote emotional well being. </h2>
+  <h1 class = "about"> What is Mental Health? </h1>
+    <h2 class = "about">Mental health includes our emotional, psychological, and social well-being. It affects how we think, feel, and act. It also helps determine how we handle stress, relate to others, and make choices. Mental health is important at every stage of life, from childhood and adolescence through adulthood.</h2>
+    <h1 class = "about"> About the Application</h1>
+    <h2 class = "about"> We created an application that enables our users to easily track their daily emotions so that they have a tool to measure their emotional well being and mental health during the day. </h2>
   </div>
   </body>
 </html>
