added the graph feature!!!!!

--- a/templates/dailygraph.html
+++ b/templates/dailygraph.html
@@ -13,7 +13,7 @@
     type: 'line',
     data: {
       // x-axis, will become timestamp
-      labels: [{{xAxis|safe}}],
+      labels: {{xAxis|safe}},
       datasets: [{
           //should be numeric value for emotion
           data: {{yAxis}},
