--- a/templates/table/index.html
+++ b/templates/table/index.html
@@ -20,7 +20,25 @@
 	<link rel="stylesheet" type="text/css" href="static/css/util.css">
 	<link rel="stylesheet" type="text/css" href="static/css/main.css">
 <!--===============================================================================================-->
-<script type='text/javascript'>
+<style>
+.container {
+    width: 60%; /* Full width */
+    background-color: #ddd;
+		margin-left: -30px;
+		/* Grey background */
+}
+
+.skills {
+    text-align: center; /* Right-align text */
+    padding-left: 20px%;
+		/* Add some right padding */
+    line-height: 25px; /* Set the line-height to center the text inside the skill bar, and to expand the height of the container */
+    color: white; /* White text color */
+}
+
+ /* Green */
+</style>
+<!-- <script type='text/javascript'>
 location.reload(forceGet);
 // function reload() {
 //
@@ -36,25 +54,10 @@ location.reload(forceGet);
 // reload()
 
 
-</script>
+</script> -->
 
 </head>
 <body>
-	<nav role='navigation'>
-      <div id="menuToggle">
-
-        <input type="checkbox" />
-        <span style="background:black;"></span>
-        <span style="background:black;"></span>
-        <span style="background:black;"></span>
-        <ul id="menu">
-          <a href="/homepage"><li>HomePage</li></a>
-          <a href="/dailylog"><li>Dailylog</li></a>
-          <a href="/about"><li>About</li></a>
-        </ul>
-
-      </div>
-    </nav>
 <h1> Daily Log </h1>
 <a id = "homelink" href = "/homepage">Log another feeling</a>
 	<div class="limiter">
@@ -82,7 +85,11 @@ location.reload(forceGet);
 								{% for entry in tableData %}
 								<tr class="row100 body">
 									<td class="cell100 column1">{{ entry.chosen_emotion }}</td>
-									<td class="cell100 column2">{{ entry.chosen_intensity}}</td>
+									<td class="cell100 column2">
+										<div class="container">
+  <div class="skills" style = "width: {{ entry.chosen_intensity}}0%; background-color: #4CAF50; margin-left: -20px;">{{entry.chosen_intensity}}  </div>
+</div>
+									</td>
 									<td class="cell100 column3">{{ entry.chosen_time}}</td>
 									<td class="cell100 column4">{{ entry.chosen_reason}}</td>
 									<!-- <td class="cell100 column5"></td> -->
