--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -15,14 +15,14 @@ http://www.templatemo.com/tm-490-comila
 	<meta name="description" content="">
 
 	<!-- stylesheets css -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/animate.min.css">
+	<link rel="stylesheet" href="../static/secondattempt/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../static/secondattempt/css/animate.min.css">
 
-  	<link rel="stylesheet" href="css/et-line-font.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+  	<link rel="stylesheet" href="../static/secondattempt/css/et-line-font.css">
+	<link rel="stylesheet" href="../static/secondattempt/css/font-awesome.min.css">
 
-  	<link rel="stylesheet" href="css/vegas.min.css">
-	<link rel="stylesheet" href="css/style.css">
+  	<link rel="stylesheet" href="../static/secondattempt/css/vegas.min.css">
+	<link rel="stylesheet" href="../static/secondattempt/css/style.css">
 
 	<link href='https://fonts.googleapis.com/css?family=Rajdhani:400,500,700' rel='stylesheet' type='text/css'>
 
@@ -57,7 +57,7 @@ http://www.templatemo.com/tm-490-comila
 					<h1 class="wow fadeInUp" data-wow-delay="0.4s">Spiral Up</h1>
           			<h3 class="wow fadeInUp" data-wow-delay="0.6s">Let's make <strong>today</strong> better <strong>than the </strong> last</h3>
           			<!-- <a href="#about" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="0.8s">Let's begin</a> -->
-        			<a href="/homepage" data-toggle="modal" data-target="#modal1" class="btn btn-lg btn-success smoothScroll wow fadeInUp" data-wow-delay="1.0s">Let's Get Started!</a>
+        			<a href="/login" data-target="#modal1" class="btn btn-lg btn-success smoothScroll wow fadeInUp" data-wow-delay="1.0s">Let's Get Started!</a>
 				</div>
 			</div>
 
@@ -71,13 +71,13 @@ http://www.templatemo.com/tm-490-comila
 		<div class="row">
 
       <div class="col-md-6 col-sm-12">
-        <img src="images/about.jpg" class="img-responsive wow fadeInUp" alt="About">
+        <img src="../static/secondattempt/images/about.jpg" class="img-responsive wow fadeInUp" alt="About">
       </div>
 
 			<div class="col-md-6 col-sm-12">
 				<div class="about-thumb">
 					<div class="section-title">
-						<h1 class="wow fadeIn" data-wow-delay="0.2s">our company</h1>
+						<h1 class="wow fadeIn" data-wow-delay="0.2s">our team!</h1>
 						<h3 class="wow fadeInUp" data-wow-delay="0.4s">Our team is based in Pittsburgh</h3>
 					</div>
 					<div class="wow fadeInUp" data-wow-delay="0.6s">
@@ -108,7 +108,7 @@ http://www.templatemo.com/tm-490-comila
           </div>
           <div class="media-body">
             <h2 class="media-heading">Accessible</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque luctus lacus nulla, eget varius justo tristique ut.</p>
+            <p>We Strive to make our interface interactive and easy to use..</p>
           </div>
         </div>
       </div>
@@ -120,7 +120,7 @@ http://www.templatemo.com/tm-490-comila
           </div>
           <div class="media-body">
             <h2 class="media-heading">Bootstrap</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque luctus lacus nulla, eget varius justo tristique ut.</p>
+            <p>filler words</p>
           </div>
         </div>
       </div>
@@ -132,7 +132,7 @@ http://www.templatemo.com/tm-490-comila
           </div>
           <div class="media-body">
             <h2 class="media-heading">Daily Log</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque luctus lacus nulla, eget varius justo tristique ut.</p>
+            <p>We keep track of your emotions so you don't have to</p>
           </div>
         </div>
       </div>
@@ -218,20 +218,7 @@ http://www.templatemo.com/tm-490-comila
 
 <!-- modal -->
 <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-      <div class="modal-content modal-popup">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h2 class="modal-title">Our Newsletter</h2>
-        </div>
-        <form action="#" method="post">
-          <input name="fullname" type="text" class="form-control" id="fullname" placeholder="Full Name">
-          <input name="email" type="text" class="form-control" id="email" placeholder="Email Address">
-          <input name="submit" type="submit" class="form-control" id="submit" value="Subscribe Now">
-        </form>
-        <p>Thank you for your visiting!</p>
-      </div>
-  </div>
+
 </div>
 
 
@@ -239,14 +226,14 @@ http://www.templatemo.com/tm-490-comila
 <a href="#back-top" class="go-top"><i class="fa fa-angle-up"></i></a>
 
 <!-- javscript js -->
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="../static/secondattempt/js/jquery.js"></script>
+<script src="../static/secondattempt/js/bootstrap.min.js"></script>
 
-<script src="js/vegas.min.js"></script>
+<script src="../static/secondattempt/js/vegas.min.js"></script>
 
-<script src="js/wow.min.js"></script>
-<script src="js/smoothscroll.js"></script>
-<script src="js/custom.js"></script>
+<script src="../static/secondattempt/js/wow.min.js"></script>
+<script src="../static/secondattempt/js/smoothscroll.js"></script>
+<script src="../static/secondattempt/js/custom.js"></script>
 
 </body>
 </html>
