--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -46,7 +46,7 @@
         <ul id="menu">
           <a href="/homepage"><li>HomePage</li></a>
           <a href="/dailylog"><li>Dailylog</li></a>
-          <a href="/about"><li>About</li></a>
+          <!-- <a href="/about"><li>About</li></a> -->
           <a href = {{link}}><li>{{signout}}</li></a>
         </ul>
 
