--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -44,9 +44,9 @@
         <span style="background:black;"></span>
         <span style="background:black;"></span>
         <ul id="menu">
-          <a href="/homepage"><li>HomePage</li></a>
-          <a href="/dailylog"><li>Dailylog</li></a>
-          <!-- <a href="/about"><li>About</li></a> -->
+          <a href="/homepage"><li>Home Page</li></a>
+          <a href="/dailylog"><li>Daily Log</li></a>
+          <a href="/dailygraph"><li>Daily Graph</li></a>
           <a href = {{link}}><li>{{signout}}</li></a>
         </ul>
 
