--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -57,7 +57,7 @@ http://www.templatemo.com/tm-490-comila
 					<h1 class="wow fadeInUp" data-wow-delay="0.4s">Spiral Up</h1>
           			<h3 class="wow fadeInUp" data-wow-delay="0.6s">Let's make <strong>today</strong> better <strong>than the </strong> last</h3>
           			<!-- <a href="#about" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="0.8s">Let's begin</a> -->
-        			<a href="/login" data-target="#modal1" class="btn btn-lg btn-success smoothScroll wow fadeInUp" data-wow-delay="1.0s">Let's Get Started!</a>
+        			<a href="{{ start_link }}" data-target="#modal1" class="btn btn-lg btn-success smoothScroll wow fadeInUp" data-wow-delay="1.0s">Let's Get Started!</a>
 				</div>
 			</div>
 
