--- a/templates/emotionpage.html
+++ b/templates/emotionpage.html
@@ -8,7 +8,23 @@
     <title> Your emotion was {{emotion}}</title>
   </head>
   <body>
-    
+    <nav role='navigation'>
+        <div id="menuToggle">
+
+          <input type="checkbox" />
+          <span style="background:black;"></span>
+          <span style="background:black;"></span>
+          <span style="background:black;"></span>
+          <ul id="menu">
+            <a href="/homepage"><li>Home Page</li></a>
+            <a href="/dailylog"><li>Daily Log</li></a>
+            <a href="/dailygraph"><li>Daily Graph</li></a>
+            <a href = {{link}}><li>{{signout}}</li></a>
+          </ul>
+
+
+        </div>
+      </nav>
     <div class = "questioncontainer" style="background-color: {{color}}">
     <h1 id = "greetingmessage">You chose: {{emotion}}. Can you explain why?</h1>
     <form method="post" action="/dailylog" >
