--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -17,6 +17,7 @@ http://www.templatemo.com/tm-490-comila
 	<!-- stylesheets css -->
 	<link rel="stylesheet" href="../static/secondattempt/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../static/secondattempt/css/animate.min.css">
+	<link rel="stylesheet" href="../static/secondattempt/css/center.css">
 
   	<link rel="stylesheet" href="../static/secondattempt/css/et-line-font.css">
 	<link rel="stylesheet" href="../static/secondattempt/css/font-awesome.min.css">
@@ -108,7 +109,7 @@ http://www.templatemo.com/tm-490-comila
           </div>
           <div class="media-body">
             <h2 class="media-heading">Accessible</h2>
-            <p>We Strive to make our interface interactive and easy to use..</p>
+            <p>We Strive to make our interface interactive and easy to use.</p>
           </div>
         </div>
       </div>
@@ -119,8 +120,8 @@ http://www.templatemo.com/tm-490-comila
             <i class="icon icon-refresh"></i>
           </div>
           <div class="media-body">
-            <h2 class="media-heading">Bootstrap</h2>
-            <p>filler words</p>
+            <h2 class="media-heading">Rise Above</h2>
+            <p>Use this application to rise above and overcome a cycle of negagtive emotions. Spiral up, not down!</p>
           </div>
         </div>
       </div>
@@ -132,7 +133,7 @@ http://www.templatemo.com/tm-490-comila
           </div>
           <div class="media-body">
             <h2 class="media-heading">Daily Log</h2>
-            <p>We keep track of your emotions so you don't have to</p>
+            <p>We keep track of your emotions so you don't have to. By logging your emotions, a personal daily log is created for your viewing.</p>
           </div>
         </div>
       </div>
@@ -153,6 +154,7 @@ http://www.templatemo.com/tm-490-comila
 			<div class="col-md-offset-2 col-md-8 col-sm-12">
 				<div class="section-title">
 					<h1 class="wow fadeInUp" data-wow-delay="0.3s">Get in touch</h1>
+					<img src="static/group.jpg" alt="grouppic" class="center">
 					<p class="wow fadeInUp" data-wow-delay="0.6s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
 				</div>
 				<div class="contact-form wow fadeInUp" data-wow-delay="1.0s">
