--- a/static/emotionpage.css
+++ b/static/emotionpage.css
@@ -1,3 +1,9 @@
+#greetingmessage {
+  font-size: 50px;
+}
+#greetingmessage2 {
+  margin-top: 1%;
+}
 .slidecontainer {
     width: 100%; /* Width of the outside container */
 }
@@ -60,6 +66,8 @@ h2 {
   /* font-family: 'Raleway', sans-serif; */
   font-family: 'Rajdhani', sans-serif;
   color: #81827D;
+  text-align: center;
+  font-size: 45px;
   /* background-color: {{ description.color }}; */
 }
 
@@ -369,3 +377,79 @@ a:hover
   }
 
   body {font-family: 'Rajdhani', sans-serif;}
+
+#submitButton {
+    border: 2px solid white;
+       background-color: transparent;
+       color: black;
+       padding: 14px 28px;
+       font-size: 16px;
+       cursor: pointer;
+  }
+
+.hoverButton:hover {
+      background-color: #4CAF50;
+      color: white;
+  }
+
+
+  /* =================++TEXTBOX EDIT++=============================== */
+  /* *
+  box-sizing: border-box
+
+.inp{
+  position: relative
+  margin: auto
+  width: 100%
+  max-width: 280px
+}
+  /* //transform: rotateX(45deg) rotateY(-10deg) rotate(25deg) scale(2) */
+  /* .label{
+    position: absolute
+    top: 16px
+    left: 0
+    font-size: 16px
+    color: #9098A9
+    font-weight: 500
+    transform-origin: 0 0
+    transition: all .2s ease
+  }
+  .border{
+    position: absolute
+    bottom: 0
+    left: 0
+    height: 2px
+    width: 100%
+    background #0077FF
+    transform: scaleX(0)
+    transform-origin: 0 0
+    transition: all .15s ease
+  }
+  input{
+    -webkit-appearance: none
+    width: 100%
+    border: 0
+    font-family: inherit
+    padding: 12px 0
+    height: 48px
+    font-size: 16px
+    font-weight: 500
+    border-bottom: 2px solid #C8CCD4
+    background: none
+    border-radius: 0
+    color: #223254
+    transition: all .15s ease
+    &:hover
+      background: rgba(#223254,.03)
+    &:not(:placeholder-shown)
+      + span
+        color #5A667F
+        transform: translateY(-26px) scale(.75)
+    &:focus
+      background: none
+      outline: none
+      + span
+        color #0077FF
+        transform: translateY(-26px) scale(.75)
+        + .border
+            transform: scaleX(1)  */
