changed words on front page of website!!

--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -155,9 +155,9 @@ http://www.templatemo.com/tm-490-comila
 				<div class="section-title">
 					<h1 class="wow fadeInUp" data-wow-delay="0.3s">Get in touch</h1>
 					<img src="static/group.jpg" alt="grouppic" class="center">
-					<p class="wow fadeInUp" data-wow-delay="0.6s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+					<p class="wow fadeInUp" data-wow-delay="0.6s">Here are the three awesome developers (from left to right): Athar, Autumn and Clara. We will soon be off to college to Wayne State University (Athar), University of Maryland (Autumn) and Stanford University (Clara). Thanks for checking out our website.</p>
 				</div>
-				<div class="contact-form wow fadeInUp" data-wow-delay="1.0s">
+				<!-- <div class="contact-form wow fadeInUp" data-wow-delay="1.0s">
 					<form id="contact-form" method="post" action="#">
                         <div class="col-md-6 col-sm-6">
                           	<input name="name" type="text" class="form-control" placeholder="Your Name" required>
@@ -172,7 +172,7 @@ http://www.templatemo.com/tm-490-comila
 							<input name="submit" type="submit" class="form-control submit" id="submit" value="SEND MESSAGE">
 						</div>
 					</form>
-				</div>
+				</div> -->
 			</div>
 
 		</div>
@@ -202,9 +202,8 @@ http://www.templatemo.com/tm-490-comila
       <div class="col-md-4 col-sm-5">
         <h2>Our Studio</h2>
         <p class="wow fadeInUp" data-wow-delay="0.6s">
-          120-240 aliquam augue libero,<br>
-          Convallis in vulputate 10220 <br>
-          San Francisco, CA, USA
+          6425 Penn Avenue,<br>
+          Pittsburgh, PA 15206 <br>
         </p>
         <ul class="social-icon">
           <li><a href="#" class="fa fa-facebook wow bounceIn" data-wow-delay="0.9s"></a></li>
