added total history page

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -45,6 +45,7 @@
           <a href="/homepage"><li>Home Page</li></a>
           <a href="/dailylog"><li>Daily Log</li></a>
           <a href="/dailygraph"><li>Daily Graph</li></a>
+          <a href="/history"><li>Total History</li></a>
           <a href = {{link}}><li>{{signout}}</li></a>
         </ul>
 
